Add chapter 11 pictures

--- a/belaveshkin.sty
+++ b/belaveshkin.sty
@@ -191,3 +191,7 @@
 
 %%%%%  TARASHKEVICA  %%%%%
 \addto\captionsbelarusian{\renewcommand{\contentsname}{Зьмест}}
+
+
+\setlength{\textfloatsep}{12pt plus 2.0pt minus 2.0pt}
+\setlength{\dbltextfloatsep}{12pt plus 2.0pt minus 2.0pt}
