--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -8,6 +8,11 @@
 
 Калі ж чалавек жыве ва ўмовах цясноцьця сучаснага індустрыяльнага горада, то навакольнае асяродзьдзе, хутчэй за ўсё, узмацняе стрэс і шкодзіць здароўю: шматпавярховая забудова, вузкія тратуары, сьмецьце на вуліцах, надпісы на сьценах, шмат незнаёмцаў (і маргіналы сустракаюцца), шчыльны рух аўтамабіляў, адсутнасьць паркаў і пешаходнай інфраструктуры, пастаянны шум, бруднае паветра, мала зеляніны, позірк упіраецца ў~бэтонныя агароджы і парэпаную тынкоўку. У такім асяродзьдзі не ўзьнікае ані найменшага жаданьня выходзіць на вуліцу, і чалавек праводзіць вольныя гадзіны на канапе побач з~кампутарам і лядоўняй, бо гэта куды больш бясьпечны і прыемны спосаб баўленьня часу ў~такой сытуацыі.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/1.pdf}
+\end{figure}
+
 \emph{У розныя часы асяродзьдзе ўяўляла розныя пагрозы. У самым пачатку сваёй эвалюцыі чалавек пачаў актыўнае пераўтварэньне навакольнага асяродзьдзя ў~сваіх інтарэсах, выкарыстоўваючы агонь, інструмэнты, аб'ядноўваючы намаганьні супляменьнікаў. Цясноцьце ў~старажытных гарадах і антысанітарыя спрыялі разьвіцьцю эпідэміяў і паразітарных інфэкцыяш, і неабходнасьць супрацьстаяць хваробам і выжываць прысьцёбвала далейшае разьвіцьцё.}
 
 У апошнюю сотню гадоў людзі неймаверна хутка мяняюць навакольнае асяродзьдзе, мы не пасьпяваем адаптавацца, і гэтыя зьмены ня йдуць на карысьць нашаму здароўю. Мы пазбаўляемся шэрагу карысных чыньнікаў навакольнага асяродзьдзя, такіх як сонца, моцна ўзьдзейнічаюць шкодныя фактары, напрыклад бруднае паветра. Для многіх таксінаў і сьмецьця не існуе дзяржаўных межаў~--- яны разьмяркоўваюцца па ўсёй плянэце, назапашваюцца ў~глебе, расьлінах і жывёлах і трапляюць у~наш арганізм. Паветраныя таксіны таксама разносяцца па ўсёй зямной кулі і ўзьдзейнічаюць на ўсіх людзей.
@@ -17,6 +22,11 @@
 \textbf{Аптымальныя ўмовы навакольнага асяродзьдзя}~--- гэта такое асяродзьдзе, у~якім у~нас выяўляецца аптымальнае самаадчуваньне, мінімальная рызыка захворваньняў і высокая працягласьць жыцьця. Вельмі часта сацыяльныя (атачэньне), фізычныя (шум, сьвятло, тэмпэратура, выпраменьваньне), хімічныя (паветра, вада, прадукты) і біялягічныя (цьвіль, паразіты) чыньнікі злучаюцца і дзейнічаюць разам. Таму важна падтрымліваць гігіену навакольнага асяродзьдзя. Вялікае значэньне мае мікраклімат у~кватэры і хаце. Спалучэньне неспрыяльных аздобных матэрыялаў, тэмпэратуры, вільготнасьці, вэнтыляцыі можа прывесьці да сындрому ``хворага дому'', які разбурае здароўе сваіх насельнікаў і кароціць жыцьцё.
 
 Многія людзі зьвяртаюцца да розных спосабаў ``дэтаксікацыі'', але, па сутнасьці, самы надзейны спосаб паменшыць таксічную нагрузку~--- гэта зьнізіць трапленьне шкодных рэчываў у~арганізм, то бок палепшыць асяродзьдзе, у~якім мы жывём. Наша мэта~--- навучыцца ў~любым месцы выяўляць шкодныя чыньнікі асяродзьдзя і ліквідаваць іх, плюс папоўніваць брак карысных чыньнікаў у~сваім асяродзьдзі для фармаваньня аптымальных умоваў.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.3]{willpower/ch11/2.pdf}
+\end{figure}
 
 \subsection*{Пытаньні і заданьні}
 
@@ -57,6 +67,11 @@
 
 \infobox{Рызыка хваробы Альцгаймэра на 12\,\% вышэйшая ў~тых, хто жыве за 50 мэтраў ад дарогі, у~параўнаньні з~тымі, хто жыве на адлегласьці 200 і больш мэтраў. Пятая частка ўсіх выпадкаў захворваньняў можа быць выклікана брудным паветрам.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.3]{willpower/ch11/3.pdf}
+\end{figure}
+
 Асабліва адчувальныя да бруднага паветра дзеці, цяжарныя, старыя, людзі з~хранічнымі захворваньнямі. Часьціцы сажы могуць патрапіць нават у~пляцэнту~--- так, забруджваньне павялічвае рызыку заганаў разьвіцьця, выклікае затрымку росту і зьніжэньне аб'ёму мозгу ў~дзяцей, пагаршэньне іх псыхічнага здароўя, уключаючы рызыку дзіцячых дэпрэсій. У розных дасьледаваньнях бруднае паветра павялічвае рызыку аўтызму ад 12 да 76\,\%. Дасьледаваньні на жывёлах пацьвярджаюць, што пражываньне паблізу ажыўленых трасаў шкодзіць мозгу нашчадкаш яшчэ на раньніх стадыях разьвіцьця, павялічваючы ўзровень нэўразапаленьня.
 
 \subsection*{Пытаньні і заданьні}
@@ -77,6 +92,11 @@
 Першае, з~чаго трэба пачаць, гэта весьці маніторынг якасьці паветра. У гарадах, дзе шмат датчыкаў, можна скарыстацца мапамі, на якіх выводзяцца штохвілінныя паказьнікі, і ўсталяваць іх на тэлефон. Калі ў~вашым горадзе такой сыстэмы датчыкаў няма ці вы хочаце атрымаць высокую дакладнасьць вымярэньняў, то можна набыць датчык якасьці паветра для сябе~--- абавязкова з~вымярэньнем колькасьці часьціц P2,5. Многія датчыкі сынхранізуюцца са смартфонамі, і канкрэтныя лічбы будуць заўсёды ў~вас пад рукой. Некаторыя вытворцы дазваляюць уключыць свой датчык у~глябальную сетку, напрыклад, AirVision. Так ваша вымярэньне становіцца даступным і для людзей побач.
 
 \textbf{Скарачайце ўзьдзеяньне.} Уплыў забруджанага паветра мае назапашвальны эфэкт~--- гэта значыць, чым больш узровень і даўжэй узьдзеяньне, тым горш. Калі мінімізаваць узьдзеяньне бруднага паветра і дыхаць чыстым паветрам дома, то арганізм пасьпявае выводзіць тое, што патрапіла на вуліцы. Трымайцеся далей ад дарог, асабліва буйных.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/4.pdf}
+\end{figure}
 
 \textbf{Кожны мэтар мае значэньне}, бо з~аддаленьнем ад крыніцы забруджваньне скарачаецца экспанентна, выхлапы разводзяцца чыстым паветрам. Гуляйце ці рабіце прагулкі не ў~гадзіну пік і не адразу ж пасьля яе заканчэньня. Калі вы ідзяце з~маленькімі дзецьмі, то паднімайце іх на рукі, каб трымаць вышэй за ўзровень выхлапных газаў. Ня стойце каля самай дарогі, калі чакаеце зялёнага сыгнала сьвятлафора. Памятайце, што важная ня проста адсутнасьць трасы або завода побач, але і кірунак ветру. Калі праз надвор'е, слабы вецер ці пажары ў~горадзе паўстаў смог, па магчымасьці выязджайце за горад ці трымайце дома ўключаны фільтр ачысткі паветра (пра фільтры ніжэй) пры закрытых вокнах.
 
@@ -104,6 +124,11 @@
 
 Сачыце за тэхнічным станам награвальнікаў вады на газе, газавымі плітамі, абагравальнікамі і ўсімі прыборамі, дзе спальваецца паліва. Абмяжоўвайце колькасьць сынтэтычных мыйных сродкаў, лепш выкарыстоўваць ачыстку парай. Часьцей выносьце сьмецьце, трымайце бытавую хімію ў~старанна закаркаваных ёмістасьцях далей ад дзяцей.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/5.pdf}
+\end{figure}
+
 \textbf{Усталюйце HEPA фільтр.} Гэтае простае і эфэктыўнае рашэньне, бо менавіта НЕРА фільтр лепш за ўсё чысьціць паветра ад небясьпечных РМ 2.5 часьціц і зьмяншае іх канцэнтрацыю. Пры гэтым кантралюйце эфэктыўнасьць ачысткі датчыкам РМ 2.5 (ён можа быць і ўбудаваны ў~фільтр). Дасьледаваньні паказваюць, што выкарыстаньне такіх фільтраў паляпшае якасьць сну. Асабліва яны важныя для дзяцей і цяжарных. Чыстае паветра ўначы вельмі важнае, бо гэта дае магчымасьць дыхальным шляхам ачысьціцца і хоць часткова кампэнсаваць дыханьне брудным паветрам днём.
 
 Зьвярніце ўвагу, што з~цягам часу эфэктыўнасьць фільтраў зьмяншаецца, і іх важна мяняць. Калі вы жывяце ў~прыватным доме, то вялікая колькасьць дрэваў і кустоўя могуць захопліваць часьціцы і зьніжаць іх канцэнтрацыю ў~паветры.
@@ -124,6 +149,11 @@
 \infobox{Сьпёртасьць~--- гэта часта лішак вуглякіслага газу, які выдыхаюць людзі. Гэта нябачны, але шкодны ў~высокіх канцэнтрацыях чыньнік.}
 
 Сярэдняя канцэнтрацыя вуглякіслага газу (CO\textsubscript{2}) складае ў~вонкавым паветры 0,035\,\%, ці 350 ppm. Але ў~гарадах, дзе больш спальваньня паліва, яго канцэнтрацыя можа дасягаць і 500 ppm. Галоўная крыніца вуглякіслага газу ўнутры памяшканьняў~--- гэта мы самі. Кожны чалавек на кожным выдыху выдыхае паветра з~падвышаным утрыманьнем вуглякіслага газу, які ўтварыўся ў~выніку жыцьцядзейнасьці. Каб падтрымліваць узровень CO\textsubscript{2} на нармальных 800 ppm на аднаго чалавека ў~пакоі, патрабуецца вэнтыляцыя каля 34 м\textsuperscript{3}/гадзіну! Калі вокны і дзьверы зашпунтаваныя, а~вэнтыляцыя не працуе, то ўзровень CO\textsubscript{2} хутка пачне зашкальваць.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/6.pdf}
+\end{figure}
 
 \textbf{Праблема вэнтыляцыі} існуе: з~аднаго боку, будаўнікі часта грэбуюць нормамі, робячы няўдалыя сыстэмы вэнтыляцыі, эфэктыўнасьць работы якіх ніхто не правярае. Зь цягам часу шахты могуць забівацца брудам, зашывацца~--- звонку гэта не прыкметна. Зьяўленьне плястыкавых вокнаў яшчэ пагоршыла сытуацыю. Бо ў~драўляных вокнах было шмат невялікіх шчылінаў, якія забясьпечвалі мікравэнтыляцыю, а~цяпер гэтага няма. Часта мы закрываемся ``наглуха'' для цішыні або цяпла. Зьяўленьне ізалявальных матэрыялаў, ушчыльняльнікаў, пракладак для дзьвярэй і вокнаў дазваляе нам цалкам зашпунтаваць сябе ў~хатах. А калі прытоку паветра няма, то і вэнтыляцыя перастае працаваць як мае быць.
 
@@ -213,6 +243,11 @@
 
 Калі мы вядзём гаворку пра памяшканьне, важна ўлічваць і акустычны камфорт, які парушаецца залішнім адлюстраваньнем гуку, што значна павялічвае зашумленасьць памяшканьня. Пры гэтым староньнія шумы змушаюць увесь час напружваць слых і падвышаць голас. Паляпшэньне акустычнага камфорту мяркуе стварэньне гукапаглынальных паверхняў: калі сьцены і столь памяшканьня зробленыя зь цьвёрдых матэрыялаў, якія добра адбіваюць гук (напрыклад, з~гіпса-кардонных лістоў), то ў~памяшканьні будзе назірацца падвышаная гулкасьць. Стварэньне камфортнага асяродзьдзя вырашаецца з~дапамогай выкарыстаньня ў~інтэр'еры памяшканьняў дэкаратыўных акустычных панэляў. Сэнсу дабівацца поўнай цішыні няма, яна можа быць нават некамфортная для чалавека.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/7.pdf}
+\end{figure}
+
 \textbf{Навушнікі і бярушы.} Бярушы~--- старажытнае вынаходства, ім некалькі тысячаў гадоў: яшчэ Адысэй заляпіў воскам вушы сваёй камандзе, каб яны не паддаліся песьням сырэнаў і не разьбілі аб скалы карабель. Бярушы~--- гэта просты, танны і вельмі эфэктыўны спосаб барацьбы з~шумам. Цікава, але яны паляпшаюць сон нават у~тых людзей, хто ўпэўнены, што гукі ім не замінаюць. Я сам даўно карыстаюся бярушамі і вельмі шаную іх ахоўнае дзеяньне на мой сон і нэрвы. Бярушы дапамагаюць адпачыць у~транспарце, ноччу, калі ў~вас маленькія дзеці або гучныя суседзі. Асабліва гэта актуальна для людзей, якія адчуваюць стомленасьць ад шуму або маюць павышаную да яго адчувальнасьць.
 
 \emph{Ёсьць шмат відаў бярушаў: гумовыя, сіліконавыя, васковыя і да т.~п. Я аддаю перавагу васковым, бо яны разьмякчаюцца і прымаюць форму слыхавога праходу, ня ціснуць на ягоныя сьценкі, у~адрозьненьне ад паралёнавых. Для самых прасунутых ёсьць індывідуальныя бярушы, якія могуць вырабіць са зьлепку вуха.}
@@ -266,6 +301,11 @@
 
 \emph{Аналіз паказвае, што ў~паветры жылых памяшканьняў і офісаў можа адначасова прысутнічаць больш за сотню хімічных злучэньняў, якія часта ў~некалькі разоў перавышаюць гранічна дапушчальныя канцэнтрацыі. Сярод іх~--- часьціцы волава, кадмію, ртуці, медзі, цынку, фэнолу, фармальдэгіду, таксічныя выпарэньні ад мыйных і чысьцільных сродкаў і інш.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.2]{willpower/ch11/8.pdf}
+\end{figure}
+
 У памяшканьнях паветра бруднейшае, чым на вуліцы, канцэнтрацыя ўнутры можа быць у~сотні разоў вышэй, чым на адкрытым паветры. Пыл, часьціцы якога нябачныя для вока, практычна не асядае, увесь час вісіць у~паветры і зьяўляецца адной з~асноўных крыніц інфэкцыяў: мікробы і бактэрыі выкарыстоўваюць яе часьціцы (памерам меней за 10\,мкм) для перасоўваньня і кантакту.
 
 \infobox{Высокая вільготнасьць у~спалучэньні з~кепскай вэнтыляцыяй павялічвае рызыку зьяўленьня цьвілі, удыханьня зароднікаў, якія могуць быць шкоднымі для здароўя. Крыніцай забруджваньня паветра ў~памяшканьні можа стаць і занадта дбайная ўборка з~выкарыстаньнем вялікай колькасьці сродкаў бытавой хіміі.}
@@ -305,6 +345,11 @@
 
 \textbf{Не карміце кляшчоў.} Галоўная крыніца пылу і ежы для кляшчоў~--- гэта адпадкі эпітэлію нашай скуры, які назапашваецца, у~асноўным, у~пасьцельнай бялізьне. Таму трэба штотыдзень старанна яе праць пры тэмпэратуры 60° С і вышэй. Калі вы выкарыстоўваеце тэкстыльныя канапы, то не ляжыце на іх голым і ня сьпіце без прасьціны або замяніце іх на скураныя. Абмяжуйце колькасьць дзіцячых мяккіх цацак і рэгулярна іх мыйце.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/9.pdf}
+\end{figure}
+
 За сваё жыцьцё пылавы клешч вырабляе фэкаліяў у~2000 разоў больш, чым важыць сам, і менавіта яго адходы небясьпечнейшыя за ўсё. Кляшчы аддаюць перавагу цеплыні, вільгаць і эпітэлію скуры, таму нашы пасьцелі аптымальныя для іх жыцьцядзейнасьці і размнажэньня. Шмат іх можа быць у~тапках і падушках.
 
 \subsection*{Цьвіль}
@@ -330,6 +375,11 @@
 Аптымальна выкарыстоўваць пыласосы з~НЕРА-фільтрамі, распрацаваныя адмыслова для алергікаў. Калі ў~вас ёсьць робат-пыласос, то можна запраграмаваць яго працу, калі вас няма дома і вокны адкрытыя. Так пыл, які ўздымаецца падчас прыборкі, не нашкодзіць вам. На жаль, большасьць звычайных пыласосаў толькі дробняць часьціцы пылу, а~чым драбнейшыя часьціцы, тым глыбей яны трапляюць у~лёгкія і мацней шкодзяць здароўю.
 
 Паветраводы сыстэмаў прымусовага апалу і кандыцыянаваньні паветра могуць быць крыніцай забруджваньня ў~хаце. Калі ў~іх ёсьць цьвіль, скапленьне пылу і сьмецьця ці ў~паветраводах пасяліліся паразіты, неабходна тэлефанаваць прафэсіяналам, каб усё вычысьціць.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/10.pdf}
+\end{figure}
 
 \textbf{Выкарыстоўвайце фільтры.} Акрамя НЕРА-фільтраў, якія забясьпечваюць высокаэфэктыўнае затрыманьне часьціц, ёсьць фотакаталітычныя, газаачышчальныя, электрастатычныя, ультрафіялетавыя і іншыя тыпы фільтраў. Некаторыя вытворцы камбінуюць розныя прынцыпы ачысткі ў~адным прыборы. Эфэктыўнасьць працы фільтра трэба правяраць датчыкамі якасьці паветра.
 
@@ -359,6 +409,11 @@
 \subsection*{Арганізуйце правільна праводку ў~доме}
 
 Гэта ня толькі крыху паменшыць інтэнсіўнасьць поля, але й зьнізіць рызыку электратраўмы~--- хай усе разэткі будуць з~зазямленьнем. Сачыце, каб відэльцы шчыльна ўваходзілі ў~разэткі, а~прыборы былі спраўныя. Праводка ў~сьцяне не павінна праходзіць каля галавы, калі вы сьпіце (або лінія мусіць быць абясточаная).
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/11.pdf}
+\end{figure}
 
 \infobox{Ідэальным варыянтам зьяўляецца выкарыстаньне адмысловых выключальнікаў: калі ўсе прылады выключаны, то сетка ў пакоі адключаецца.}
 
@@ -412,6 +467,11 @@
 
 Таксама сухое паветра вядзе да назапашваньня электрастатычнай электрычнасьці, назапашваньня пылу і павольнейшаму яе асяданьню. Мікрачасьціцы пылу яшчэ мацней раздражняюць высахлыя сьлізістыя абалонкі. Калі вы змушаныя доўгі час знаходзіцца ў~памяшканьні з~сухім паветрам, то памажце нос любым алеем: тлушчавая плёнка на паверхні сьлізістай будзе абараняць яе ад высыханьня. Прамываньне носа воднымі растворамі, на жаль, мае эфэкт кароткатэрміновы~--- ня больш за паўгадзіны.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/12.pdf}
+\end{figure}
+
 \subsection*{Як кантраляваць вільготнасьць}
 
 Каб вымераць вільготнасьць у~памяшканьні, скарыстайцеся адмысловым прыборам, які называецца гідрамэтар. Як правіла, датчык убудоўваецца ва ўвільгатняльнікі, у~вас можа быць некалькі датчыкаў у~розных памяшканьнях для паасобнага кантролю. Ёсьць спэцыяльныя асушальнікі паветра, ёсьць ультрагукавыя ўвільгатняльнікі паветра, і можна лёгка падтрымліваць неабходны ўзровень вільготнасьці ў~доме. Дасьледаваньні паказваюць, што павелічэньне вільготнасьці да 40\,\% здымае сымптомы раздражненьня. Оптымум вільготнасьці 40--60\,\%, занадта высокая вільготнасьць непажаданая, бо можа выклікаць шэраг іншых праблемаў. Выкарыстаньне буфэрных дыхальных матэрыялаў, накшталт мінімальна апрацаванага дрэва ці гіпсавых канструкцый, дазваляе ім убіраць лішак вільгаці з~паветра і затым, пры высыханьні, аддаваць.
@@ -444,6 +504,11 @@
 Больш натуральных матэрыялаў. Аддавайце перавагу натуральным матэрыялам у~дызайне дома: тканінам, скуры, каменю, дрэву, мэталу~--- яны бясьпечныя, даўгавечныя і прыгожыя. Пачніце з~таго, што лёгка замяніць,~--- напрыклад, са штораў. Вельмі важна стварыць хатняе асяродзьдзе без выкарыстаньня патэнцыйна таксічных матэрыялаў. Напрыклад, драўняна-стружкавыя і драўняна-валанкністыя пліты, якія выкарыстоўваюцца для вырабу мэблі, могуць быць крыніцай фармальдэгіду і фэнолаў, прычым выдзяляюцца яны працяглы час. Танныя лямінаты, лінолеўм, плястык могуць уплываць гэтак жа. 
 
 \emph{У сваёй кватэры мы зрабілі падлогу з~дошак~--- гэта зручна і бясьпечна.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch11/13.pdf}
+\end{figure}
 
 Пакуйце і захоўвайце прадукты хаты ў~шкляным, а~ня плястыкавым посудзе. Плястыкавая тара, асабліва пры награваньні ці паўторным выкарыстаньні, узмацняе выдзяленьне небясьпечных злучэньняў. Не бярыце рукамі і не захоўвайце касавыя чэкі, не друкуйце шмат на прынтэры ў~жылых памяшканьнях або праветрывайце іх пасьля друку. Выкарыстоўвайце арганічныя туалетныя прыналежнасьці без фталатаў і іншых небясьпечных злучэньняў.
 
@@ -483,3 +548,10 @@
 2. Параўнайце сваё колеравае ўспрыманьне аднаго і таго ж прадмета ў~заштораным пакоі са сьвятлом і выносячы яго на гаўбец пад сонца.
 
 3. Вымыйце вокны і пазбаўцеся ўсяго, што перашкаджае сонечным прамяням. Па магчымасьці перанясіце ваша працоўнае месца бліжэй да акна. Ці паўплывала гэта на вашую прадуктыўнасьць?
+
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.25in}
+  \includegraphics[width=\textwidth]{willpower/ch11/full.pdf}  
+\end{figure}
