Add chapter 14 pictures

--- a/willpower/chapter14.tex
+++ b/willpower/chapter14.tex
@@ -60,6 +60,11 @@
 
 \textbf{Нават генэтыка ўплывае на здароўе ня так моцна, як лад жыцьця,}~--- калі пераводзіць у~лічбы, то ўплыў звычак у~пяць разоў большы, чым уплыў генаў. Мы схільныя недаацэньваць ролю звычак~--- яны здаюцца нам дробнымі, незаўважнымі, няважнымі. Нам хочацца быць героямі, радыкальна мяняць сваё жыцьцё з~панядзелка і да самае старасьці. Але такі жорсткі падыход, як аказалася, не працуе ў~доўгатэрміновай пэрспэктыве: рэзкія скачкі з~канапы ў~залу, ад піцы да салаты толькі разгойдваюць здароўе і веру ў~сябе. Чым часьцей сканчаюцца няўдачай вашыя спробы зьменаў, тым хутчэй разьвіваецца вывучаная бездапаможнасьць.
 
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.2]{willpower/ch14/2.pdf}
+\end{figure*}
+
 \textbf{Валявы рэсурс самадысцыпліны канчатковы}: стрэсы, сьпешка, недасып, недаяданьне~--- усё гэта можа аслабіць волю і зьбіць нас са шляху. Таму выпрацоўка звычак~--- гэта выкарыстаньне аўтаматычных мадэляў паводзінаў, якія вядуць нас да здароўя без штодзённых валявых выдаткаў. Зьмяніцца цяжка, бо наш мозг настроены на эканомію і аптымізацыю дзейнасьці. Чым больш звычак спрацоўвае на аўтамаце, тым меншы ціск. Калі мы любім тое, што робім, атрымліваем ад гэтага пазітыўныя эмоцыі, ідэнтыфікуем сябе са сваімі звычкамі, то робім усё лёгка, без супраціўленьняня.
 
 \infobox{Мы самі робімся звычкай. Чым больш звычак мы ўкараняем, тым лягчэй нам гэта рабіць~--- мы папросту трэніруем ``звычку да новых звычак''.}
@@ -73,6 +78,11 @@
 Многім людзям страшна нешта мяняць, бо чым даўжэй існуе звычка, тым яна трывалейшая. І вось вы ў~сваёй зоне камфорту, адкуль здаецца, што ламаць сябе ня варта. Але ня верце гэтаму заспакаяльнаму голасу~--- чалавек заўсёды можа зьмяніцца да лепшага, і нават у~сталым узросьце гэтыя зьмены ідуць на карысьць.
 
 \emph{Дасьледчыкі на працягу 18 гадоў назіралі за людзьмі, якім на той момант было ня менш за 75 гадоў. Аказалася, што адмова ад курэньня і павелічэньне фізычнай актыўнасьці нават у~такім узросьце павялічвае працягласьць жыцьця на 5 гадоў для жанчынаў і на 6 гадоў для мужчынаў.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch14/1.pdf}
+\end{figure}
 
 \textbf{Мы жывыя, пакуль мяняемся, зьмены~--- гэта і ёсьць само жыцьцё.} Касьнеючы, мы становімся менш гнуткімі і адаптыўнымі, больш крохкімі~--- і нават невялікі стрэсар зможа нас зламаць. У любым узросьце будзьце дзецьмі ўнутры сябе, цікаўнымі і рызыкоўнымі!
 
@@ -140,6 +150,11 @@
 
 \emph{У рэжыме «хуткага» жыцьця мы больш спакушаемся. У банку, калі вы сядзеце запаўняць дамову на крэдыт, побач з~вамі будзе стаяць паднос з~цукеркамі, а~запаўняць паперы будзе прывабная дзяўчына~--- і не выпадкова. Чым вышэй у~вас паднімецца дафамін пры выглядзе салодкага або жаночай прывабнасьці, тым горш вы зможаце разьлічыць доўгатэрміновыя наступствы і ўмовы крэдыту.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch14/3.pdf}
+\end{figure}
+
 Пры напрацаваных унутраных рэсурсах спакусы будуць на вас уплываць прыкметна слабей. Палітыкі, навіны, стрэс падаюць нам мноства сыгналаў дэфіцыту і пагрозы, што абмяжоўвае нашы паводзіны і робіць іх зьмену невыгоднай для арганізма. Усё гэта кароціць наш гарызонт плянаваньня і пераключае ў~рэжым ``хуткага'' жыцьця. Бо няма сэнсу імкнуцца худнець, калі ўсё чалавецтва можа загінуць ад каметы (вайны, крызісу, клімату, прышэльцаў, эпідэміі) у~найбліжэйшыя паўгода! Важна выконваць інфармацыйную гігіену і ўсьвядомленасьць для таго, каб захаваць матывацыю і мэтазгоднасьць зьменаў. Не паддавайцеся на правакацыі і пазьбягайце абясцэньваньня будучыні~--- гэта дапаможа вам захоўваць капітал, увагу і рэсурсы, не зьліваючы іх у~чорныя дзіркі.
 
 Пашырайце ваш гарызонт плянаваньня: штодня надавайце час прагляду сваіх доўгатэрміновых плянаў, разважайце пра іх, пра вашу місію. Чытайце кнігі пра будучыню, прыдумляйце 5--10 крэатыўных ідэй для трэніроўкі ўяўленьня, шукайце магчымасьці і доўгатэрміновы патэнцыял у~тым, што атачае вас. Думайце пра сваю спадчыну, пра дзяцей і ўнукаў, пра экалёгію плянэты і пра ўсё, што пераўзыходзіць вас. Думайце пра карысьць здаровых звычак як пра задавальненьне~--- у~будучыні. Павярніцеся тварам да будучыні, а~не стойце да яе сьпінай, разглядаючы свой цень.
@@ -190,6 +205,11 @@
 \textbf{Напішыце ліст сабе будучаму.} Што вы хочаце спытаць і даведацца? Такіх лістоў можа быць шмат~--- вы можаце адправіць іх самі сабе і атрымаць праз год ці пяць гадоў па электроннай пошце. Таксама можна напісаць і ліст сабе сучаснасьці ад сябе будучыні. Або ўявіце сустрэчу з~самім сабой. Пра што вы сябе спытаеце? Пра што будзеце казаць? Гэта варта рабіць рэгулярна з~дапамогай сэрвісаў накшталт FutureMe, Letter 2 Future або выкарыстоўваючы функцыю ``адправіць пазьней'' у~Гугл і Яндэкс пошце.
 
 \textbf{Пастаўце сябе на месца будучага ``я''.} Ацаніце свой выбар, падумайце, як бы адрэагаваў будучы ``я'' на вашы ўчынкі сёньня? Які б варыянт ён упадабаў? Як паўплываюць на вас праз 20 гадоў зьдзейсненыя сёньня ўчынкі?
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.4]{willpower/ch14/4.pdf}
+\end{figure}
 
 \subsection*{Як думаць пра будучыню?}
 
@@ -242,6 +262,11 @@
 
 Траўматычны досьвед важна прапрацаваць, выразна і ясна прызнаючы нэгатыўныя моманты, але й акцэнтуючы пазітыўныя. Падчас яго апісаньня карысным будзе правесьці лёгкую дысацыяцыю, замяніўшы займеньнік ``я'' на апісальны ў~трэцяй асобе, як быццам гэтую сытуацыю бачыў нехта іншы. Таксама варта выкарыстоўваць кагнітыўныя словы (думаю, лічу, таму што) і дадаць больш дэталяў. Выпісаўшы гэты досьвед на паперу, можна рытуальна запячатаць і спаліць ці закапаць. Як ні дзіўна, але ў~дасьледаваньнях паказана, што гэта дапамагае зьменшыць узьдзеяньне траўмавальных перажываньняў.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch14/5.pdf}
+\end{figure}
+
 \subsection*{Пытаньні і заданьні}
 
 1. Напішыце сваю аўтабіяграфію.
@@ -264,6 +289,11 @@
 \textbf{Зьмены парадаксальныя}: часам патрабуюць часу, а~часам разважаньні крышталізуюцца ў~выглядзе азарэньня, якое прыводзіць да пункту невяртаньня і разуменьня, што трэба мяняцца і так далей жыць нельга.
 
 \emph{Дасьледаваньні паказваюць, што больш за 90\,\% людзей самі, без дапамогі звонку, прымаюць рашэньне і самастойна завязваюць з~такімі шкоднымі звычкамі, як курэньне і алькаголь.} 
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch14/6.pdf}
+\end{figure}
 
 \textbf{Што замінае зьменам?} Аналіз папярэдняга досьведу дазволіць зразумець, колькі каштуюць~--- часу, грошай, сілаў~--- вашыя трансфармацыі. Накіньце зьверху яшчэ 100\,\%, бо мы схільныя пераацэньваць свае сілы і недаацэньваць выдаткі. Ці гатовыя вы плаціць такую цану? Таксама падлічыце, чаго вам будзе каштаваць, калі вы ня зьменіце сваю звычку: колькі грошай страціце, колькі гадоў жыцьця страціце, колькі новага не даведаецеся. А такі кошт вы гатовыя заплаціць? 
 
@@ -396,6 +426,11 @@
 \subsection*{Камфорт}
 
 \textbf{Другі этап~--- гэта стварэньне эмацыйнага камфорту.} Тут важная эмацыйная бясьпека: дзейнічайце натуральна і кангруэнтна, упэўнена асвойвайце звычку ў~камфортных умовах, дзе вам можна спрабаваць, памыляцца, выпраўляцца. Часта людзям цяжка ўтрымліваць здаровыя звычкі, калі яны сутыкаюцца з~кпінамі навакольных, няхай гэта будзе заняткі спортам ці пахуданьне. Група падтрымкі, камфортнае асяродзьдзе важныя, каб мы маглі сфакусавацца на звычцы, а~не турбаваліся аб тым, што пра нас падумаюць навакольныя.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch14/7.pdf}
+\end{figure}
 
 \subsection*{Самаідэнтыфікацыя}
 
@@ -636,6 +671,11 @@
 
 Мы пакідаем ранейшы сыгнал і ранейшую ўзнагароду, але замяняем праграму дзеяньняў. Для зьмены шкодных звычак важна зразумець, якую ўзнагароду яны вам даюць і як вы можаце дасягнуць яе іншымі спосабамі. Напрыклад, калі ўзнагародай у~цыгарэце зьяўляецца менавіта стымуляцыя, то дасягнуць вам гэтага можна і з~дапамогай кавы, кантраснага душа, прысяданьняў. Калі ўзнагарода~--- камунікацыя ў~курылцы, то замяніць гэта можна званком сябру. Калі вы нэрвуецеся, вы пачынаеце грызьці пазногці або трэсьці нагой. Замяніце звычку: замест нэрвовасьць (трыгер), трасяніна нагой (звычка), цялесныя адчуваньні (узнагарода) будзе новы цыкл~--- нэрвовасьць (трыгер), 20 прысяданьняў (звычка), цялесныя адчуваньні (узнагарода). Цыкл шкоднай звычкі застаецца~--- яе складана выкараніць,~--- але само дзеяньне замяняецца на карыснае.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch14/8.pdf}
+\end{figure}
+
 Трэба дакладна ведаць, якую ўзнагароду дае вам звычка і як вы можаце атрымаць гэтую ўзнагароду іншым спосабам. Трэнінг замяшчэньня звычкі накіраваны на тое, каб вам дамагчыся падобнай узнагароды, выкарыстоўваючы іншае дзеяньне. Чым больш падобныя адчуваньні, тым больш эфэктыўная замена. Такім чынам, для зьмены звычкі вам трэба своечасова заўважыць дзеяньне трыгера, хваліць сябе, што вы змаглі гэта ўбачыць, і падтрымліваць жаданьне гэта заўважаць як мага часьцей. Затым вы сьвядома зьмяняеце дзеяньне на новае і атрымліваеце падобную з~ранейшай узнагароду ці фізычнае адчуваньне. Вы не змагаецеся супраць жаданьня нешта зрабіць, не прапануеце нешта іншае сабе, а~выкарыстоўваеце старую нэўронную схэму, замяніўшы ў~ёй адзін з~кампанэнтаў. Так мы можам пасьпяхова супрацьстаяць дэструктыўным імпульсам, накіроўваючы іх у~пазітыўнае рэчышча. Трэніруемся заўважаць трыгер і замяшчаць яго іншымі паводзінамі, якія вядуць да падобнага самаадчуваньня. Маем!
 
 \subsection*{Пытаньні і заданьні}
@@ -664,6 +704,11 @@
 Магчыма, варта прадугледзець \textbf{незваротныя дзеяньні}~--- ``спаліць масты'',~--- калі вы нешта робіце аднаразова, і ўжо няма магчымасьці вярнуць гэта назад. Напрыклад, зьяжджаеце на пару месяцаў у~іншую краіну, каб вывучыць замежную мову, адклейваеце налепкі ад клавіятуры, каб асвоіць мэтад сьляпога друку. У іншых выпадках аддаяце тэлевізар, заводзіце сабаку, прадаяце машыну, плаціце за месяц дастаўкі хатняга харчаваньня і да т.~п.
 
 Згодна з~прынцыпам маленькіх мэтаў, засяроджвайцеся на актыўным дзеяньні сёньня. Нагадваючы сабе, што ўчора і заўтра~--- гэта два дні, калі нічога не адбываецца, вы выкладаецеся сёньня, бо ``толькі сёньня мы можам зьмяніцца''. Розныя лічбавыя і папяровыя трэкеры са штодзённым адзначэньнем зробленага дапамагаюць вам ``не разрываць ланцуг''.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch14/9.pdf}
+\end{figure}
 
 \subsection*{Старайцеся}
 
@@ -713,6 +758,11 @@
 \infobox{Памылкі~--- гэта навучаньне: ігнараваць свае памылкі, а~не вучыцца на іх,~--- гэта і ёсьць найвялікшая памылка.}
 
 \textbf{Эфэкт ``к чорту ўсё!''.} Пры зрыве частай рэакцыяй бывае жага ўсё кінуць. Калі мы чакаем ад сябе ідэальных вынікаў, але не атрымліваем жаданага, то можам быць фрустраваныя. А каб пазбавіцца крыніцы фрустрацыі, гатовыя пахаваць свае спробы зьмяніцца. Унутраны дыялёг правакуе зрыў: ``Адзін раз ня страшна, ты заслужыў, сёньня сьвята, не пазбаўляй сябе гэтага, жывём толькі раз''. Замест пэрфэкцыянізму і самакрытыкі праявіце да сябе спачуваньне, нагадайце, што памыляюцца ўсе, і зараз трэба апэратыўна вяртацца ў~выбраную каляіну.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch14/10.pdf}
+\end{figure}
 
 \textbf{У момант спакусы} дапамагае проста зрабіць паўзу, не рабіць ніякіх дзеяньняў, спыніцца. Дыхайце (можна па праграме ў~тэлефоне), вазьміце падтрымку (патэлефануйце вашаму мэнтару ці сябру), адцягніцеся (зрабіце тое, што цалкам паглынае ўвагу: тэтрыс, планка, пазл, відэагульня, складаная кніга, хуткая хада), пакіньце месца дзеяньня трыгера, уключыце процідзеяньне (замест разважаньняў аб гэтым эклеры прачытайце яшчэ раз вашу мэту і матывацыю), успомніце досьвед пасьпяховага пераадоленьня такой жа праблемы ў~мінулым. Пасьля таго, як хваля спакусы спадзе, прааналізуйце: чаму вы так сябе паводзілі, што спрацавала? Чаму трыгер быў такі моцны?
 
@@ -835,3 +885,10 @@
 2. Як зрабіць старую звычку цікавейшай? Складзіце сьпіс ідэй. Якую вобласьць вашага жыцьця вы хочаце абнуліць і пачаць нанова?
 
 3. Як навакольныя замінаюць вашым здаровым звычкам?
+
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.5in}
+  \includegraphics[width=\textwidth]{willpower/ch14/full.pdf}  
+\end{figure}
